refactor the code and reorganize the classes and impl more powerful file detection.